common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk-team-05-ingress
  namespace: sk-team-05
spec:
  ingressClassName: public-nginx
  tls:
    - hosts:
      - skore.skala25a.project.skala-ai.com
      secretName: sk-team-05-tls
  rules:
    - host: skore.skala25a.project.skala-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skore-front-service
                port:
                  number: 80
          - path: /api/v1/ai
            pathType: Prefix
            backend:
              service:
                name: skore-ai-service
                port:
                  number: 8000
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: skore-back-service
                port:
                  number: 8080
